--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
-    "express-handlebars": "^5.1.0"
-  },
-  "devDependencies": {
+    "express-handlebars": "^5.1.0",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15"
   }
